src/test/ui/error-codes/E0614.stderr
error[E0614]: type `u32` cannot be dereferenced
  --> $DIR/E0614.rs:13:5
   |
13 |     *y; //~ ERROR E0614
   |     ^^

error: aborting due to previous error

